5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1806_2101.log
== TEST (2019-06-04 15:59:37) 
-- CODE:
from numpy import *
n = ("Digite um numero inteiro, maior que 2: ")
vec = array([0, 1])
i = 2
while(i < n):
	vec[i] = vec[i-2] + vec[i-1]
print(vec)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:00:13) 
-- CODE:
from numpy import *
n = int(input("Digite um numero inteiro, maior que 2: "))
vec = array([0, 1])
i = 2
while(i < n):
	vec[i] = vec[i-2] + vec[i-1]
print(vec)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:01:59) 
-- CODE:
from numpy import *
n = int(input("Digite um numero inteiro, maior que 2: "))
vec = ""
i = 2
while(i < n):
	vec[i] = vec[i-2] + vec[i-1]
print(vec)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:02:46) 
-- CODE:
from numpy import *
n = int(input("Digite um numero inteiro, maior que 2: "))
vec = zeros(, dtype=int)
i = 2
while(i < n):
	vec[i] = vec[i-2] + vec[i-1]
print(vec)	
-- ERROR:
File "XXXX", line 3
    vec = zeros(, dtype=int)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:02:55) 
-- CODE:
from numpy import *
n = int(input("Digite um numero inteiro, maior que 2: "))
vec = zeros(n, dtype=int)
i = 2
while(i < n):
	vec[i] = vec[i-2] + vec[i-1]
print(vec)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:03:19) 
-- CODE:
from numpy import *
n = int(input("Digite um numero inteiro, maior que 2: "))
vec = zeros(n, dtype=int)
i = 2
while(i < n):
	vec[i] = vec[i-2] + vec[i-1]
	i = i+1
print(vec)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:03:59) 
-- CODE:
from numpy import *
n = int(input("Digite um numero inteiro, maior que 2: "))
vec = [0, 1]
i = 2
while(i < n):
	vec[i] = vec[i-2] + vec[i-1]
	i = i+1
print(vec)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:05:51) 
-- CODE:
from numpy import *
n = int(input("Digite um numero inteiro, maior que 2: "))
vec = zeros(n, dtype=int)
vec[0] = 0
vec[1] = 1
i = 2
#while(i < n):
#	vec[i] = vec[i-2] + vec[i-1]
#	i = i+1
print(vec)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:06:09) 
-- CODE:
from numpy import *
n = int(input("Digite um numero inteiro, maior que 2: "))
vec = zeros(n, dtype=int)
vec[0] = 0
vec[1] = 1
i = 2
while(i < n):
	vec[i] = vec[i-2] + vec[i-1]
	i = i+1
print(vec)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:06:19) 
-- CODE:
from numpy import *
n = int(input("Digite um numero inteiro, maior que 2: "))
vec = zeros(n, dtype=int)
vec[0] = 0
vec[1] = 1
i = 2
while(i < n):
	vec[i] = vec[i-2] + vec[i-1]
	i = i+1
print(vec)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:06:30) 
-- CODE:
from numpy import *
n = int(input("Digite um numero inteiro, maior que 2: "))
vec = zeros(n, dtype=int)
vec[0] = 0
vec[1] = 1
i = 2
while(i < n):
	vec[i] = vec[i-2] + vec[i-1]
	i = i+1
print(vec)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 16:06:40) 
-- CODE:
from numpy import *
n = int(input("Digite um numero inteiro, maior que 2: "))
vec = zeros(n, dtype=int)
vec[0] = 0
vec[1] = 1
i = 2
while(i < n):
	vec[i] = vec[i-2] + vec[i-1]
	i = i+1
print(vec)	
-- EXECUTION TIME:
1.099
-- TEST CASE 1:
---- input:
10
---- correct output:
[ 0 1 1 2 3 5 8 13 21 34]
---- user output:
[ 0  1  1  2  3  5  8 13 21 34]
-- TEST CASE 2:
---- input:
8
---- correct output:
[ 0 1 1 2 3 5 8 13]
---- user output:
[ 0  1  1  2  3  5  8 13]
-- TEST CASE 3:
---- input:
18
---- correct output:
[ 0 1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987 1597]
---- user output:
[   0    1    1    2    3    5    8   13   21   34   55   89  144  233
  377  610  987 1597]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
